# rknn_seg

./: .gitignore  CMakeLists.txt  README.md
src/: PPSeg.cpp  PPSeg.h
test/: main.cpp
test/data/: config.yaml
